Add UForge services tuning use cases for migration projects